spelling out GC on first mention

--- a/_posts/2017-11-14-top-100-for-gc.markdown
+++ b/_posts/2017-11-14-top-100-for-gc.markdown
@@ -14,7 +14,7 @@ People come to our digital channels to accomplish a very wide range of tasks.  W
 
 ## Top tasks
 
-There are thousands of GC tasks out there, some small, and some complex. So how do we prioritize?  By identifying the most important and most used tasks. We call these the GC “top tasks”.  We are focusing on the 100 top tasks for the Government of Canada. We have begun to improve the content related to these top tasks so that people can more successfully accomplish them. 
+There are thousands of Government of Canada (GC) tasks out there, some small, and some complex. So how do we prioritize?  By identifying the most important and most used tasks. We call these the “top tasks”.  We are focusing on the 100 top tasks for the Government of Canada. We have begun to improve the content related to these top tasks so that people can more successfully accomplish them. 
 
 <figure style="margin-top: 50px;" >
 
