--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -11,6 +11,18 @@ description: About the Digital Transformation Office at Treasury Board of Canada
 
 The Digital Transformation Office at Treasury Board of Canada Secretariat works to ensure citizens can find and complete their tasks with the Government of Canada through Canada.ca. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+<figure style="margin-top: 50px;" >
+
+<div class="col-md-6">
+<div class="center-block">
+<img class="img-responsive center-block"  style="margin-bottom: 50px;" src="/images/team_photo_Oct_2017_965x385px.png" alt="Photo of the DTO team, October 2017" />
+</div>
+</div>
+
+
+<div class="col-md-6">
+<figcaption class="center-block" style="margin-top: 50px;">
+
 ## Meet the team
 
 Allen Pink
