--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -19,11 +19,15 @@ The Digital Transformation Office at Treasury Board of Canada Secretariat works 
 
 <div class="col-md-6">
   
-  <img class="img-responsive" src="/images/kitten.jpg" style="width: 50px;" alt="Photo of the DTO team, October 2017" />
-
-Allen Pink
+  <img class="img-responsive" src="/images/kitten.jpg" style="width: 200px;" alt="Photo of the DTO team, October 2017" />
+  
+  Allen Pink
 Director
+  <div>
 
+
+<div class="col-md-6">
+  
 Allen is quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
   <img class="img-responsive" src="/images/kitten.jpg" style="width: 50px;" alt="Photo of the DTO team, October 2017" />
