--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -17,7 +17,7 @@ The Digital Transformation Office at Treasury Board of Canada Secretariat works 
 
 <div>
 
-<div class="col-md-6">
+<div class="col-md-4">
   
   <img class="img-responsive" src="/images/kitten.jpg" style="width: 125px;" alt="Photo of the DTO team, October 2017" />
   
@@ -26,12 +26,12 @@ Director
   <div>
 
 
-<div class="col-md-6">
+<div class="col-md-4">
   
 Allen is quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
   <img class="img-responsive" src="/images/kitten.jpg" style="width: 50px;" alt="Photo of the DTO team, October 2017" />
-
+</div>
 
 Peter Smith
 Chief, Product design
