--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -17,7 +17,7 @@ The Digital Transformation Office at Treasury Board of Canada Secretariat works 
 
 <div class="col-md-10" >
 
-<div class="col-lg-4">
+<div class="col-lg-4" style="float: left;">
   
   <img class="img-responsive" src="/images/kitten.jpg" style="width: 125px;" alt="Photo of the DTO team, October 2017" />
   
