--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -15,22 +15,25 @@ The Digital Transformation Office at Treasury Board of Canada Secretariat works 
 
 ## Meet the team
 
-<div class="col-md-10" style="position: relative;" >
-
-<div class="col-lg-4" style="float: left;">
-  
-  <img class="img-responsive" src="/images/kitten.jpg" style="width: 150px;" alt="Photo of the DTO team, October 2017" />
-  
-  Allen Pink
+<div class="col-md-6">
+<div class="center-block">
+<img class="img-responsive center-block"  style="margin-bottom: 50px;" src="/images/kitten.jpg" alt="Allen Pink" />
+Allen Pink
 Director
-  <div>
-
-
-<div style="float: right;">
-  
-Allen is quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+</div>
 </div>
 
+
+<div class="col-md-6">
+<figcaption class="center-block">
+
+   
+<p>Allen is quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 </div>
+</figure>
+
+<div class="clearfix"></div>
+
+
 
