--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -15,7 +15,7 @@ The Digital Transformation Office at Treasury Board of Canada Secretariat works 
 
 ## Meet the team
 
-<div class="col-md-3 col-xms-12">
+<div class="col-md-3 col-xs-12">
    <div class="pull-left">
    <img class="img-responsive center-block"  style="margin-bottom: 15px; padding-top: 15px;" src="/images/DTO_blog_photo_DSC_3853_277x370.jpg" width="175px" alt="Allen Pink" />
       Allen Pink <br>
