--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -8,15 +8,16 @@ published: false
 lang: en
 description: About the Digital Transformation Office at Treasury Board of Canada Secretariat. 
 ---
-The Digital Transformation Office, within the Treasury Board Secretariat under Strategic Communications and Ministerial Affairs, consists of communications professionals with expertise in plain language writing, content and interaction design, and user research.
+The Digital Transformation Office (DTO) is part of the Treasury Board Secretariat of Canada’s Strategic Communications and Ministerial Affairs branch. At DTO, we are communications professionals with expertise in plain language writing, content and interaction design, and user research.
 
 We work with departments to:
 
-•	ensure the Canada.ca brand is recognized and trusted by Canadians
+* ensure that the Canada.ca brand is recognized and trusted by Canadians
 
-•	improve in-demand information and services published on digital channels to make them easy to find and understand, based on insight from user research
+* make information and services that are in-demand and published on digital channels easier to find and understand based on insight from user research
 
-•	help communications teams develop the digital skills and processes necessary to support a sustainable shift to digital in their organization
+* help communications teams develop their skills and processes as they make a sustainable shift to digital in their organization
+
 
 
 
