--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -84,4 +84,7 @@ We work with departments to:
 
 <img class="img-responsive" src="/images/team_photo_Oct_2017_965x385px.jpg" alt="Photo of the DTO team, October 2017" />
 
+## We want to hear from you
+
+Join the digital conversation at [#Canadadotca](https://twitter.com/search?q=%23Canadadotca) or send us an email at <ux.eu@tbs-sct.gc.ca>
 
