--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -175,7 +175,139 @@ We work with departments to:
 </figcaption>
 </div>
 
+<div class="clearfix"></div>
 
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3840_277x370.jpg" width="185px" alt="Lisa Fast" />
+      Lisa Fast <br>
+      <b>Solution Lead (Consultant)</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>Lisa is a User Experience (UX) architect and behavioural researcher with over 25 years of experience. Over her career, she has led multi-disciplinary design teams for a range of products and services, won innovation awards and has personally facilitated over 1,000 hours of UX research. After Nortel, she joined a cognitive research team at Carleton University. Lisa was UX research lead consultant for Canada.ca, and an active Github collaborator on the Government of Canada's Web Experience Toolkit (WET). Back before UX was even a thing, Lisa completed a master's degree in computer science in the psychology of programming.</p>
+
+</figcaption>
+</div>
+
+
+<div class="clearfix"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3061_277x370.jpg" width="185px" alt="Julie Dufour" />
+      Julie Dufour<br>
+      <b>Senior Web Content Strategist</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>Julie is a Senior Content Strategist for the Treasury Board of Canada Secretariat where she helps institutions to develop their own task-based, citizen-centric web pages. Julie focuses on how best practices lead to content that can be easily found, understood and used. Julie currently splits her time between developing official guidance, doing outreach and teaching digital writing at the Canada School of Public Service.  She is also the former manager of web writing for Health Canada and has spent several years figuring out how to operationalize guidance. In the last 12 months, she has presented more than 60 times to over 30 federal institutions and 2,000 people.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3831_277x370.jpg" width="185px" alt="Jane Stewart" />
+      Jane Stewart<br>
+      <b>Solution Lead (Consultant)</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>Jane Stewart is an information scientist and information architect who has practiced the discipline of organizing for over 25 years. She has designed standards-based and user-centered classification schemes, taxonomies, thesauri, and web navigation systems, and her designs have been implemented in websites, intranets, and interactive applications managed by both private and public sector organizations. As an employee, her career has included practitioner and leadership roles at Bell-Northern Research, Nortel, Industry Canada, and Systemscope. As a consultant, she has completed over 60 projects digital transformation projects with a wide variety of organizations. She has operated her independent design firm, Aboutness Inc., since 2010.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3826_277x370.jpg" width="185px" alt="Jennifer Mealing" />
+      Jennifer Mealing<br>
+      <b>Interaction Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>Jennifer has been working as a designer for nearly a decade, but it was a passion to genuinely improve experiences (and to solve real problems for real users) that made her decide to specialize in Interaction Design in recent years. Joining the Digital Transformation Office team was the perfect opportunity to help others through design. Working here presents the unique challenge, and opportunity, to build better government services for all Canadians. Together she works to validate and test ideas, building data-driven solutions for the public.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3075_277x370.jpg" width="185px" alt="Jillian LeBlanc" />
+      Jillian LeBlanc<br>
+      <b>Digital Engagement Advisor</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>Jillian is a Digital Engagement Advisor for Treasury Board Secretariat Canada. Jillian came to TBS from working as the Youth Engagement and Social Media coordinator for Equal Voice Canada and was one of the leads for the Daughters of the Vote initiative.  She has been a Samara Everyday Political Citizen nominee in 2015 and 2016 and is an Apathy is Boring 150 youth representative for Ottawa. Jillian has worked on a variety of initiatives to encourage greater youth participation in political spaces and passionate about connecting Canadians to their government through digital mediums. She can be found IRL using technology to try and solve civic engagement issues with Civic Tech and Women in Communications and Technology and she can also be found online discussing #gcdigital and #canadadotca.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3054_277x370.jpg" width="185px" alt="David Pepin" />
+      David Pepin<br>
+      <b>Content Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>David started his career in the federal public service at the Canada Revenue Agency in 2007, after studying French literature and French teaching. As he was updating publications and web pages, he found his real passion: organizing information and developing content for people, based on their real needs. Since then, his goal has been to simplify and clarify the content in order to allow users to complete their tasks as easily as possible. He continued his career at Service Canada, with Canada.ca’s Principal Publisher, and then at Global Affairs Canada, where he used his web expertise to enhance content used by thousands of people. David joined the Treasury Board Digital Transformation team with the same desire to strive to make the Government of Canada's Web presence more accessible, more understandable, easier to use and more focused on people's needs.</p>
+
+</figcaption>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="col-md-3 col-xs-12">
+   <div class="pull-left" style="padding-bottom: 25px;">
+   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3849_277x370.jpg" width="185px" alt="Laura Piper" />
+      Laura Piper<br>
+      <b>Senior Content Designer</b>
+   </div>
+</div>
+
+
+<div class="col-md-9 col-xs-12">
+<figcaption class="center-block">
+
+<p>Laura is passionate about plain language and web accessibility. She comes from a training background and loves turning complicated content into something that is easy to understand. Laura has been transforming web content for the past decade and a half with Indigenous and Northern Affairs Canada and the Correctional Service of Canada. She has led both external and internal web renewal projects. Laura’s role on the team is to improve content on Canada.ca. She looks for duplicate, conflicting, or confusing information then works with the appropriate department to make that content better for Canadians.</p>
+
+</figcaption>
+</div>
 
 <div class="clearfix"></div>
 
