--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "About the Digital Transformation Office"
-gradelevel: unknown
+gradelevel: 0
 ref: aboutus
 date:   2017-11-13 09:48:44 +0100
 published: false
