--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -25,7 +25,7 @@ We work with departments to:
 
 <div class="col-md-3 col-xs-12">
    <div class="pull-left" style="padding-bottom: 35px;">
-   <img class="img-responsive"  style="margin-bottom: 15px; padding-top: 10px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3853_277x370.jpg" width="185px" alt="Allen Pink" />
+   <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3853_277x370.jpg" width="195px" alt="Allen Pink" />
       Allen Pink <br>
       <b> Director </b>
    </div>
