--- a/_posts/2017-11-13-team.markdown
+++ b/_posts/2017-11-13-team.markdown
@@ -24,7 +24,9 @@ We work with departments to:
 
 ## Meet the team
 
-<div class="col-md-3 col-xs-12" style="padding-top: 25px;">
+<div class="clearfix" style="padding-top: 25px;"></div>
+
+<div class="col-md-3 col-xs-12">
    <div class="pull-left" style="padding-bottom: 45px;">
    <img class="img-responsive"  style="margin-bottom: 15px;" src="/images/DTO-aboutus/DTO_blog_photo_DSC_3853_277x370.jpg" width="185px" alt="Allen Pink" />
       Allen Pink <br>
